--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test": "jest --coverage",
     "lint": "eslint . --ext .ts,.html",
     "lint:fix": "eslint . --ext .ts,.html --fix",
-    "lint:check": "eslint . --ext .ts,.html --max-warnings 0"
+    "lint:check": "eslint . --ext .ts,.html --max-warnings 0",
+    "prepare": "husky",
+    "husky:install": "husky install",
+    "husky:add": "husky add"
   },
   "prettier": {
     "printWidth": 100,
@@ -51,6 +54,7 @@
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jest-preset-angular": "^16.0.0",
