--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: ['20.19.x', '22.x']
 
     steps:
       - name: Checkout repository
@@ -40,8 +40,8 @@ jobs:
       - name: Run tests with coverage
         run: npm test -- --watchAll=false --coverage
 
-      - name: Upload coverage reports to Codecov
-        if: matrix.node-version == '20.x'
+        - name: Upload coverage reports to Codecov
+        if: matrix.node-version == '20.19.x'
         uses: codecov/codecov-action@v4
         with:
           file: ./coverage/lcov.info
@@ -51,8 +51,8 @@ jobs:
       - name: Build application
         run: npm run build
 
-      - name: Archive build artifacts
-        if: matrix.node-version == '20.x'
+        - name: Archive build artifacts
+        if: matrix.node-version == '20.19.x'
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
@@ -70,7 +70,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '20.19.x'
           cache: 'npm'
 
       - name: Install dependencies
@@ -95,7 +95,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '20.19.x'
           cache: 'npm'
 
       - name: Install dependencies
