--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,13 +41,10 @@ jobs:
         run: npm test -- --watchAll=false --coverage
 
       - name: Upload coverage reports to Codecov
-        if: matrix.node-version == '20.19.x'
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
-          file: ./coverage/lcov.info
-          flags: unittests
-          name: codecov-umbrella
-
+          token: ${{ secrets.CODECOV_TOKEN }}
+          
       - name: Build application
         run: npm run build
 
